; ModuleID = '/home/carl/AnghaBench/openssl/test/extr_confdump.c_collect_all_sections.c'
source_filename = "/home/carl/AnghaBench/openssl/test/extr_confdump.c_collect_all_sections.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@section_name_cmp = common dso_local global i32 0, align 4
@section_names = common dso_local global i32 0, align 4
@collect_section_name = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_3__*)* @collect_all_sections to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @collect_all_sections(%struct.TYPE_3__* %0) #0 {
  %2 = alloca %struct.TYPE_3__*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %2, align 8
  %3 = load i32, i32* @section_name_cmp, align 4
  %4 = call i32 @sk_OPENSSL_CSTRING_new(i32 %3)
  store i32 %4, i32* @section_names, align 4
  %5 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %6 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = load i32, i32* @collect_section_name, align 4
  %9 = call i32 @lh_CONF_VALUE_doall(i32 %7, i32 %8)
  %10 = load i32, i32* @section_names, align 4
  %11 = call i32 @sk_OPENSSL_CSTRING_sort(i32 %10)
  ret void
}

declare dso_local i32 @sk_OPENSSL_CSTRING_new(i32) #1

declare dso_local i32 @lh_CONF_VALUE_doall(i32, i32) #1

declare dso_local i32 @sk_OPENSSL_CSTRING_sort(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
